CMAKE_MINIMUM_REQUIRED(VERSION 3.16)
# 基本环境
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)
if(DEFINED ENV{VENDOR_BOOST})
    set(VENDOR_BOOST $ENV{VENDOR_BOOST})
else()
    set(VENDOR_BOOST /data/vendor/boost-1.73)
endif()

project(flame)
include_directories(SYSTEM ${VENDOR_BOOST}/include)
add_executable(test_coroutine src/coroutine_test.cpp)
target_link_libraries(test_coroutine pthread)
add_executable(test_encoding_hex src/encoding/hex_test.cpp)
add_executable(test_encoding_url src/encoding/url_test.cpp)
add_executable(test_encoding_utf8 src/encoding/utf8_test.cpp)
add_executable(test_net_local_address src/net/local_address_test.cpp)
add_executable(test_time_delta_clock src/time/delta_clock_test.cpp)
